# simple-password-manager

./: Cargo.toml
src/: enc.rs  main.rs  mysql.rs  tsql.rs
