[package]
name = "simple-password-manager"
version = "0.1.0"
authors = ["Hinterberger-Thomas <[thomas.hinterberger.eu@gmail.com]>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
mysql_async = "0.27.1"
tokio-core = "0.1.18"
tower-grpc = "0.1.1"
tokio = "1.4.0"
crate = "0.0.2"